Increase Monolog section padding to prevent image clipping

--- a/style.css
+++ b/style.css
@@ -1339,7 +1339,7 @@ a:hover, .news-slider__card:hover {
 .monolog-section {
     background-color: #0b0b0b;
     color: #fff;
-    padding: 120px 5vw;
+    padding: 240px 5vw;
     font-family: 'Inter', sans-serif;
     min-height: 80vh;
     display: flex;
